[gd_scene format=3 uid="uid://ctg6vhrjxx0ow"]

[ext_resource type="Script" path="res://scripts/town.gd" id="1_3kmuk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kmuk")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Town"

[node name="BtnEnterDungeon" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -70.0
offset_right = 110.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Enter Dungeon"

[node name="BtnShop" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Shop (WIP)"

[node name="BtnStatus" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 90.0
offset_right = 110.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Status"

[node name="BtnInventory" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 170.0
offset_right = 110.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Inventory"

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 250.0
offset_right = 110.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "GOLD: 0"

[node name="ModalLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false
z_index = 100
z_as_relative = false

[node name="Overlay" type="ColorRect" parent="ModalLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 2

[node name="Panel" type="Panel" parent="ModalLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="ModalLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 12.0
offset_right = 60.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Title"

[node name="Body" type="RichTextLabel" parent="ModalLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 52.0
offset_right = -16.0
offset_bottom = -48.0
fit_content = true
autowrap_mode = 3

[node name="BtnClose" type="Button" parent="ModalLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -8.0
grow_horizontal = 2
text = "Close"

[connection signal="pressed" from="BtnEnterDungeon" to="." method="_on_btn_enter_dungeon_pressed"]
[connection signal="pressed" from="BtnShop" to="." method="_on_btn_shop_pressed"]
[connection signal="pressed" from="BtnStatus" to="." method="_on_btn_status_pressed"]
[connection signal="pressed" from="BtnInventory" to="." method="_on_btn_inventory_pressed"]
[connection signal="pressed" from="ModalLayer/Panel/BtnClose" to="." method="_on_btn_close_modal_pressed"]
